Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19793

Seclogon service fails to stop

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Services
    • None

    Description

      reactos-bootcd-0.4.16-dev-119-g4d4d68b-x86-gcc-lin-dbg

      (base/system/services/database.c:1525) ReadFile(Schedule, 1) returned FALSE
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (base/system/services/database.c:1525) ReadFile(Seclogon, 1) returned FALSE
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (win32ss/user/ntuser/nonclient.c:1185) err: Wnd is active and not set active!
      (base/applications/mscutils/servman/stop.c:96) Timeout
      err:(win32ss/user/user32/windows/messagebox.c:1048) MessageBox: L"The service did not respond to the start or control request in a timely fashion.\r\n"

      putty.log

      Attachments

        1. image-2024-10-12-14-39-35-934.png
          36 kB
          KRosUser
        2. putty.log
          8 kB
          KRosUser

        Issue Links

          Activity

            People

              ekohl ekohl
              KRosUser KRosUser
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: