[SECLOGON] Add missing service status updates

The Seclogon service must update its status to SERVICE_STOPPED on a SERVICE_CONTROL_STOP or SERVICE_CONTROL_SHUTDOWN command.

This fixes CORE-19793.